--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240816T201058Z
+"   /golfscore                                      20240816T203351Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/86229.html">Substring Sum Set                               : 0086229</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/120897.html">How long is my number?                          : 0120897</a>
 <a href="q/63834.html">Count up forever                                : 0063834</a>
