--- a/q/275009.html
+++ b/q/275009.html
@@ -26,20 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>283</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
+<tr d-ix="0"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python3, 283 bytes</h1>
-<pre class="lang-py prettyprint-override"><code>def f(g):
+<div id="pu0" class="pu"><h1>Python3, 643 bytes</h1>
+<pre class="lang-py prettyprint-override"><code>F=lambda x:{J for K in x for J in K}
+W=tuple
+def B(g):
  D={}
  for a,b in g:D[a]={*D.get(a,[]),b};D[b]={*D.get(b,[]),a} 
- q,s,S=[(i,[i],[len(D[i])])for i in D if len(D[i])==1],[],0
+ q,S=[(i,[i],[len(D[i])])for i in D if len(D[i])==1],{}
  for a,p,d in q:
   F=1
   for A in D[a]-{*p}:q+=[(A,p+[A],d+[len(D[A])])];F=0
-  if F and d not in s and d[::-1]not in s:S+=1;s+=[d,d[::-1]]
+  if F:
+   if(t:=W(d))in S:
+    if p not in S[t]and p[::-1]not in S[t]:S[t]=S[t]+[p]
+   elif(T:=W(d[::-1]))in S:
+    if p not in S[T]and p[::-1]not in S[T]:S[T]=S[T]+[p]
+   else:S[t]=[p]
  return S
+def f(g):
+ d=B(g)
+ C=0
+ for i in d:
+  V=[]
+  for j in d[i]:
+   r=[b for b in g if all(I not in b for I in j)]
+   V+=[W(sorted([*B(r+[[u,u]for u in F(g)-F(r)-{*j}])]))]
+  C+=len({*V})
+ return C 
 </code></pre>
-<p><a href="https://tio.run/##lZFBb4JAEIXv/Io5goyNq4gK2QMJ8Q9w3OwBAihJsyLSQ0P47XRmxdZTbS@P5e18702y7Wd/vpjNvu2mqaxqqN2TFzmQymF0oL50kGMBjYFTlKpcy2GRvp2q3s1RaQ@LMU5V8eMW1s1HcOCKN8ykchtUjUb1Xhk3pZOnPQ5tODKFpobvCykFzWlcPWpbLHnqStvAUQpS9hNL0irLYdGO0dWnjgRbXyUaS3/uSbhHx0dJYVxyhNyUUIK59Izf7r8qipZCP7wo86WIb5RX4nylHeiq/qMzkE1t15jerV2lBK5p0TVuSDcYWN1q7XnObzNbDElD3FmHdYf7lxQns4Yz9bf5566QWlgPL9nAsoFld5baE3VnUR1QrP4Vca8PnoJshP3wSwuBYs2J0xc" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://tio.run/##lVPBbptAEL3zFXNczLgKNsYO0R4cI6QkR1v2YbUHENjFohgTLKWy@HZ3ZqGOpbZJeplZvZ333uwMVD@b74dyPKvqyyWSRfwjSWN4C87PsD3U8AJ5CW/m@MzHl9bayOZUFZmVZlt4FDs7sCCU59YyRTEmXLYLQhVreR6E33ZZI2JU2sakfQhV8o4mBo1bsOCIS6lEjirXqIqsFCGdbG2zZM6CIeRbuF5I6Wp8t6ww5ZojdQKRdCkyPjc8amN4HlRtcHTIYY6Vo@YaU6d3mbOLfojkHbHIImINOogmkBuR2jZpLA3GtxWUh4Zll6rRcZlCpYJg6OobNOAgOTiq0kzMCpJbGbmu@t@iq7@Krlh0xaKrG9HXrLMyQJ01p5pqzVK23VJSyduxYMFvuw4yZd@1VLqf0t6ANFTTTy1VYuBui9xeXBTi6XeL3eUTH/e2aWRNY92I10PdZKlQg0dRO0qd8KS58MSFEXUxjERt0x72Lc/bMBeO5BWcB@vWvj5gAZeqzstGbIVSLo7oaxjhmOIYPRMnmujWRzUT9Cn6ODUIxynOPmWxMke/Z32t/tbLJxeO959yPcP1DHdqWDNidVxU9@je/ZdEZ@/dCBkJk@g3Ua6L7ugPRSBJIE0Y99nj7CFM@uxz9hGmnKcIsz6b911@AQ" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 
 <table id="st">
