--- a/q/275009.html
+++ b/q/275009.html
@@ -26,9 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
+<tr d-ix="0"><td>316</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="1"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python3, 643 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 316 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>def h(g,n):
+ r=[]
+ for*i,p,n in(q:=[[len(g[n]),n,n]]):
+  q+=[[len(g[c]),*i,n,c]for c in g[n]if p^c];r+=(*i,),
+ return*sorted(r),
+def f(g):
+ s=[]
+ for*i,p,n in(q:=[[h(g,n),n,n]for n,c in enumerate(g)if len(c)&lt;2]):
+  q+=[[h(g,c),*i,n,c]for c in g[n]if p^c];s+=[(*min(i,i[::-1]),)]*(len(g[n])&lt;2)*(p^n)
+ return len({*s})
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=hZBNbtswEIWRrU9BaEUq48BS5J-4doFsChTookCWBF0IMqWokGlGP4aLoifpxpv2UDlNZ0g5tYvEXXgMzbxv3hv-_G2_tY9bczj86tp8OHu-Wqx1zh55AUbMB6xeSjVg-bYOS7BgWGn403wpZaUNL6RRAgwYpUjKnq5fBhkOkDCQKWRZhhwjeZkzu8rUu_p6yXEuAB1029UmbLZ1q9e8xhYFyHlBO5s37H0-50370YcctOk2uk5bjTA6UZRMLOKTdMRll6M1qOPhBp1KKOV8PozwFqFC_nLyIhYhtysjjuGd0_ew-SGOj7iiG_S60E2crr9WZdNy9-WSMGbYkm3SPd-kFn978FIh3BABHEup6G72hfLVqSk0N0I5AbU7YDt3MoF-ac_Kjg1ZpG5Sa7VZ8x19iTPB7kzQ_RX016BmMCCTqjSaTLYo5KM-e2ks5t1bd4LlepdW4JQ3ja3Klgds-J4F_S0oRt35Q2DPD7ddi8PcN1zH1qVpuQw-3H_8FAALPt8_PARKOuGSTBUQ1T_z4fmqlTKCWIGM4RbrLSSujpWiFPHgtfEYJlgnMHUdqlOYeSB5FaB9VCc9cGG3l546THA31btLDonDEodNHTBDwGMg7yAaeXryX9qbJic7HO3-IvyLIohivywa_bMtfmObTzQ9njD2r_8H" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>F=lambda x:{J for K in x for J in K}
 W=tuple
 def B(g):
