--- a/q/275009.html
+++ b/q/275009.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>246</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>238</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s></sup> 246 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s></sup> 238 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>h=lambda g,p,n:(*sorted(h(g,n,c)for c in g[n]if p^c),)
 def f(g):
  s=[]
  for*i,p,n in(q:=[[h(g,n,n),n,n]for n,c in enumerate(g)if len(c)&lt;2]):
-  q+=[[h(g,c,c),*i,n,c]for c in g[n]if p^c];s+=[(*min(i,i[::-1]),)]*(len(g[n])&lt;2)*(p^n)
+  q+=[[h(g,c,c),*i,n,c]for c in g[n]if p^c];s+=[(*min(i,i[::-1]),)]*(g[n]==[p])
  return len({*s})
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZBNbtswEIWRrU5BaEUq48BS5J-4dYFsChTookCWBB2oFiWrkGlGP4aLoifpxpv0Ts1Buu4MqaJx4aYLjcDh-96b4bfv9nO32Znj8bHvitH8x8_Nss62H_OMlWDBLHjU7ppO53zDSzCwFsWuYWtWGVZKo6qC2dVagAhyXbCCl2IRsHYpVcBQF1VkgVr-sFhK6R2MoKLIBu3ISJt-q5us04ijYa0NX4vXiSIv9nA5kGvMBnRESJ2ZQb1qUcmjLaZVUMnFYhQrHExFnAxJiJ4i4nZlRMAa3fWNcVlfovar8Ns_XaxoD52Xuk2y_FNdtR13JzcLY4Yt2TY78G1m8TuAlwrhLhHAaykV7c7uab4mM6XmRignoHYPbO-WJtCbDqzs2YjF6iqzVpuc7-kkTgT7E0H_RzBsg5ogoJC6MppCdijk42H2ylic92DdCpbrfVaDU161tq46HrLRGxYOu6AYdacPgT1_ues7vCx8w3VsU5mOy_Dt7bv3IbDww-3dXaikEy4pVAFRwzMfny46KWNIFMgErrFeQ-rqRCmaIgnOXU9ginUKM9ehOoO5B9KzAPlRnQ7AC95e-jxhit5Ub15KSB2WOmzmgDkCHgN5A_HY09P_0j40febhaPeL8RfHECfeLB7_5Zb8w81PNPu9wsS__i8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZDPbtQwEMbVa57CysleZqtNuv-6EKRekJA4IPVouShsnGxQ4rj5s1qEeBIueynvRB-CZ2DGDqKLlnLIRB5_v--b8bfv9nO_a8zx-DD0-XT94-cuqdL6Y5ayAiyYDZ90TdvrjO94AQa2Im9atmWlYYU0qsyZvdsKEEGmc5bzQmwC1iVSBQx1k5IsUMvvN4mU3sEIKops0I6MtBlq3aa9RhwNK234VryKFXmx-xcjucVsQEeE1JkZ1MsOlXxSY1oJpdxsppHCwdSEkyhJpFUiYK3uh9a4jC-T7qvwWz9e3NH8Oit0F6fZp6rseu5ObgbGDEtYnR54nVr8DuClQrhLBPBaSkU7sw80V5uaQnMjlBNQewC2d8sS6E1HVg5syiJ1mVqrTcb3dBIngv2JYPgjGLdBTRBQSFUaTSENCvlsnL00Fuc9WLeC5XqfVuCUl52typ6HbPqaheMuKEbd6UNgz182Q4-XuW-4jm1L03MZvrl5-y4EFr6_ub0NlXTChEIVEDU-8_HxopcygliBjOEK6xXMXV0oRVPEwbnrBSyxLmHlOlRXsPbA_CxAflSXI_CMt5c-TViiN9Xr5xLmDps7bOWANQIeA3kN0czTy__SPnT-xMPR7hfhL4ogir1ZNPvLLf6Hm59o9XuFhX_9Xw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
