--- a/q/275009.html
+++ b/q/275009.html
@@ -26,17 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>213</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>210</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 213 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 210 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>x=lambda g,p,n:(*sorted(x(g,n,c)for c in g[n]if p^c),)
 y=lambda t:sum(i==()or y(i)for i in{*t})
-def f(g,r=0,s=()):
- for n,c in enumerate(g):c=s.count(t:=x(g,n,n)*(len(c)&lt;2));r+=(c&lt;1)*y(t)+(c==1);s+=t,
- return r//2
+z=lambda g,s=():sum([((m:=s.count(t:=x(g,n,n)*(len(c)&lt;2)))==1)+(m&lt;1)*y(t),s:=s+(t,)][0]for n,c in enumerate(g))//2
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZHPbpwwEMaVK09hcbJ3ZzcL2X_ZxJVyqVSph0o5IlJRMJQKjAVmxarqk_Syl_SNemiepmObKNkoTZEYi5nv982M-flLHfTXRh6P973OZ9s_vwdeJfWXLCEFKJA7OumaVouMDrQACSnLm5akpJSkiGRc5kTdpQyYd3jE9K7ra1pyThkqD7S0RInE94n-wbxM5CRHr5YvoEMR23nEKNDbuArZ16JNtKAF26W8m6dNLzXVO-4GkGxCKyFpyq5Dxq7aKafpdcAmB6rZlKacB-yqm3INHmmF7ltJ2vPz0C33cHZnuousEF2YZN-qstPUfpkh8JGEkzoZaJ0ofAdwUsZsEQEsR1Fsx_1shm0TWQgqWWwFJt0D2ds1DOhMRzbqyYwE8TxRSsiM7s0XOxHsTwT9k2BcBDWeZ5pUpRSmSYNCuhhnL6XCeQdlV1BU7JMKrHLeqarU1Cezd8Qfd0Ex6k4vAnOu2PQai7lL2IxqS_wHkf_-5sNHH4j_6eb21o8jK-SmaQyGYu6ajw9nOooCCGOIQrjAeAFLG1dxbKYIvdfKK1hjXMPGZkzcwNYBy1cB42fiegTe8HbS5x3W6G3i5VsdlhZbWmxjgS0CDoPoEoKFo9f_pV3T5TMPS9sjwCMIIAidWbB44Rb-w81NtHlcYeVu_y8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZHPattAEMbJVU-x6DTjjB1Lkf_ERIVcCoUeCjkum6Jaa1VFWglpZeyUPkkvvrQP1FvzNN0_DolLmho0QjPf7_tm199_tnv9uVGHw49Bb8bL3792aZXVn_KMFdSSWsGobzotc9hBQYrWuGk6tmalYgVXotyw9m6NhMH-EdOrfqihTFNAo9xD6YjSEF9H-hsG90_-vdE4NQeoV2k_WTeD0qBXqQ9TOIJKKljjdYyIaRrhOdTXEY72oJF6g5yDJhR8KmyIWc8uJtVQyy7TEgrEi4vYn-zh7C6XGybzQvZxln-pyl6D-8JVwMxPsZTV2Q7qrDXPjrwU0Q0NYMacC2aDPtqYLlOFBIXCCWx7ILZ1C1jQmx5ZPrAxi8Qka1upctjaLzwRbE8Ew5Ogk3rolNUEgQ2pSiVtSGOEMD3uXqrW7Ltr3RFakNusIqec9G1VagjZ-A0Lj2cxYqM7vQjT88Nm0GZ47xuu03al-VN4-Pbm3fuQWPjh5vY2FNwJUxsqyFLor_nwcKY5jygWxGO6NPWSEldnQtgt4uCl8Yzmps5p4Tq2LmjpgeRFwPrZOj8Cr3h76fOEufG29eq1hMRhicMWDlgawGPEryiaenr-X9qHJs88HO1ekXlFEUWxN4umf7nF_3DzGy0ejzDzt_8H" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
