--- a/q/275009.html
+++ b/q/275009.html
@@ -26,15 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>210</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>202</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 210 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>x=lambda g,p,n:(*sorted(x(g,n,c)for c in g[n]if p^c),)
-y=lambda t:sum(i==()or y(i)for i in{*t})
-z=lambda g,s=():sum([((m:=s.count(t:=x(g,n,n)*(len(c)&lt;2)))==1)+(m&lt;1)*y(t),s:=s+(t,)][0]for n,c in enumerate(g))//2
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 202 bytes</h1>
+<p>-2 bytes thanks to @Neil</p>
+<pre class="lang-python prettyprint-override"><code>y=lambda t:sum(i==()or y(i)for i in{*t})
+x=lambda g,p,n:(*sorted(x(g,n,c)for c in g[n]if p^c),)
+z=lambda g,s=[]:sum([s:=s+[t:=x(g,n,n)],y(t),1,0][min(3,s.count(t))]for n,c in enumerate(g)if len(c)&lt;2)//2
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZHPattAEMbJVU-x6DTjjB1Lkf_ERIVcCoUeCjkum6Jaa1VFWglpZeyUPkkvvrQP1FvzNN0_DolLmho0QjPf7_tm199_tnv9uVGHw49Bb8bL3792aZXVn_KMFdSSWsGobzotc9hBQYrWuGk6tmalYgVXotyw9m6NhMH-EdOrfqihTFNAo9xD6YjSEF9H-hsG90_-vdE4NQeoV2k_WTeD0qBXqQ9TOIJKKljjdYyIaRrhOdTXEY72oJF6g5yDJhR8KmyIWc8uJtVQyy7TEgrEi4vYn-zh7C6XGybzQvZxln-pyl6D-8JVwMxPsZTV2Q7qrDXPjrwU0Q0NYMacC2aDPtqYLlOFBIXCCWx7ILZ1C1jQmx5ZPrAxi8Qka1upctjaLzwRbE8Ew5Ogk3rolNUEgQ2pSiVtSGOEMD3uXqrW7Ltr3RFakNusIqec9G1VagjZ-A0Lj2cxYqM7vQjT88Nm0GZ47xuu03al-VN4-Pbm3fuQWPjh5vY2FNwJUxsqyFLor_nwcKY5jygWxGO6NPWSEldnQtgt4uCl8Yzmps5p4Tq2LmjpgeRFwPrZOj8Cr3h76fOEufG29eq1hMRhicMWDlgawGPEryiaenr-X9qHJs88HO1ekXlFEUWxN4umf7nF_3DzGy0ejzDzt_8H" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZBNbtswEIWRrU5BaEWmY8eS5Z8YVYFsChTookCWBBMoFq2ykChCogw7RU_SjTftYXqD5jQdkg4SF2lqwENo5n3vDfn9p9nbz60-HH4MdjNa_v61z-uiuSsLYlf90FCV55S1HdlTxTZ4KqL013P7jUW7R2EFBvSKnvdtZ2VJd7QCDWuvXqOaVFwLtSHmZs2ARfdPWJ9z4UN4v8r7N9yu8gBrJmBPLYMEJoI3StMp9ON1O2iLXSacNUY4c6mHRnaFlbRiGFJLTdfsbcouLtJwo4ezm1JuiCwr2adF-aVWvaX-i60igj9NctIUO9oUBv87CFLG_BABHHMuiMu8dYldoStJcUUvcO0ByNbv4sBgemT5QEYkEePCGKlLunVf7ESwPREMT4JO2qHTThNFLqRWWrqQFoV0ctxdaYP77oy_gqFyW9TglePe1MrSmIzekfh4FxSj7vQhsBeG7WBxeB8avmM6hc_N4_dXHz7GQOJPV9fXseBemLtQAY5i4ZkPD2eW8wRSATyFKdYpZL7OhHBbpNFL4xnMsc5h4TuuLmAZgOxFwPm5Oj8Cr3gH6fOEOXq7evlaQuaxzGMLDywRCBjwS0gmgZ7_lw6h2TMPT_sjwSNJIEmDWTL5yy39h1vYaPF4hVl4_T8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
