--- a/q/275009.html
+++ b/q/275009.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>202</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
+<tr d-ix="0"><td>197</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="1"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 202 bytes</h1>
-<p>-2 bytes thanks to @Neil</p>
-<pre class="lang-python prettyprint-override"><code>y=lambda t:sum(i==()or y(i)for i in{*t})
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s></sup> 197 bytes</h1>
+<p><em>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em></p>
+<pre class="lang-python prettyprint-override"><code>y=lambda t:sum(y(i)for i in{*t})or 1
 x=lambda g,p,n:(*sorted(x(g,n,c)for c in g[n]if p^c),)
-z=lambda g,s=[]:sum([s:=s+[t:=x(g,n,n)],y(t),1,0][min(3,s.count(t))]for n,c in enumerate(g)if len(c)&lt;2)//2
+z=lambda g,s=[]:sum([s:=s+[t:=x(g,n,n)],y(t),1,0][min(3,s.count(t))]for n,c in enumerate(g)if len(c)&lt;2)/2
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hZBNbtswEIWRrU5BaEWmY8eS5Z8YVYFsChTookCWBBMoFq2ykChCogw7RU_SjTftYXqD5jQdkg4SF2lqwENo5n3vDfn9p9nbz60-HH4MdjNa_v61z-uiuSsLYlf90FCV55S1HdlTxTZ4KqL013P7jUW7R2EFBvSKnvdtZ2VJd7QCDWuvXqOaVFwLtSHmZs2ARfdPWJ9z4UN4v8r7N9yu8gBrJmBPLYMEJoI3StMp9ON1O2iLXSacNUY4c6mHRnaFlbRiGFJLTdfsbcouLtJwo4ezm1JuiCwr2adF-aVWvaX-i60igj9NctIUO9oUBv87CFLG_BABHHMuiMu8dYldoStJcUUvcO0ByNbv4sBgemT5QEYkEePCGKlLunVf7ESwPREMT4JO2qHTThNFLqRWWrqQFoV0ctxdaYP77oy_gqFyW9TglePe1MrSmIzekfh4FxSj7vQhsBeG7WBxeB8avmM6hc_N4_dXHz7GQOJPV9fXseBemLtQAY5i4ZkPD2eW8wRSATyFKdYpZL7OhHBbpNFL4xnMsc5h4TuuLmAZgOxFwPm5Oj8Cr3gH6fOEOXq7evlaQuaxzGMLDywRCBjwS0gmgZ7_lw6h2TMPT_sjwSNJIEmDWTL5yy39h1vYaPF4hVl4_T8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hZBBbtswEEWRrU5BaEUmY9eSZdkRqgLZFCjQRYEsCSZQLVpVIVGERBl2ip6kG2_Sm_QQzWk6JB0kLtLUgEfSzH__D_njp96bL506HO5Hs5msfv_a503Rfi4LYrJhbOme1mzT9aQmtfp2br4zfI-C3aOoAg0qo-dD1xtZ0h2tQMHaEWskSMWVqDdE36wZsODuCRtyLlwAH7J8uOAmyz2smIA9NQwimAne1orOYZiuu1EZ7DJhrTHCmks1trIvjKQVw5BGKrpmb2P2JvaHeTi7KeWGyLKSQ1yUX5t6MNR9sSwg-FMkJ22xo22h8b8DL2XMDRHAMeeC2MhbG9gXqpIUN3QC2x6BbN0qFvSmR5aPZEIiMS20lqqkW_vFTgTbE8H4JOilGXtlNUFgQ5paSRvSoZDOjrvXSuO-O-2OoKncFg045XTQTW1oSCbvSHg8C4pRd3oR2PPDbjQ4vPMN19F9jbfNw_dXHz6GQMJPV9fXoeBOmNtQAZZi_poPD2eG8whiATyGOdY5JK4uhLBbxMFL4wWkWFNYuo6tS1h5IHkRsH62pkfgFW8vfZ6Qoretl68lJA5LHLZ0wAoBjwG_hGjm6fS_tA9Nnnk42j0ifEQRRLE3i2Z_ucX_cPMbLR-PsPC3_wc" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
