--- a/q/274951.html
+++ b/q/274951.html
@@ -26,12 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>803</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>apparently I was so tired when I was finishing the first time that I forgot that squares get bigger when you increase the length of a side the shuffling only works up to 4x4 squares right now first wrong answer is 39</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
 <tr d-ix="1"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="2"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="3"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>812</s> <s>806</s> 803 bytes</h1>
+<div id="pu0" class="pu"><p>apparently I was so tired when I was finishing the first time that I forgot that squares get bigger when you increase the length of a side; the shuffling only works up to 4x4 squares right now (first wrong answer is 39, which takes way more than a minute on tio anyways). give me like a couple hours, I should hopefully have it fixed by then...<br />
+<s># <a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>812</s> <s>806</s> 803 bytes</s></p>
 <pre><code>:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
 h;z;s/^/0/
 :;H;y/10/!@/
