--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240817T093437Z
+"   /golfscore                                      20240817T093728Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
+<a href="q/147469.html">Alphabet Staircase                              : 0147469</a>
+<a href="q/272303.html">Emulate Jellys tie-scan                         : 0272303</a>
 <a href="q/275009.html">Ways to paint a backbone on a tree              : 0275009</a>
 <a href="q/274951.html">Sum-of-four-squares grid                        : 0274951</a>
 <a href="q/103403.html">Print the f  f times table                      : 0103403</a>
@@ -34,7 +37,6 @@
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/120897.html">How long is my number?                          : 0120897</a>
 <a href="q/63834.html">Count up forever                                : 0063834</a>
-<a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/210454.html">Spiralize a Word Triangularly!                  : 0210454</a>
 <a href="q/183390.html">Maximum summed subsequences with non-adjacent it: 0183390</a>
