--- a/q/210454.html
+++ b/q/210454.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>087</td><td>Wolfram Language Mathematica</td><td>200902T045629Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210464#210464">att</a></td></tr>
+<tr d-ix="0"><td>085</td><td>Wolfram Language Mathematica</td><td>200902T045629Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210464#210464">att</a></td></tr>
 <tr d-ix="1"><td>021</td><td>Charcoal</td><td>200902T000041Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210459#210459">Neil</a></td></tr>
 <tr d-ix="2"><td>225</td><td>R</td><td>200902T130620Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210483#210483">Dominic </a></td></tr>
 <tr d-ix="3"><td>126</td><td>R</td><td>200903T171959Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210543#210543">att</a></td></tr>
@@ -38,10 +38,10 @@
 <tr d-ix="9"><td>318</td><td>Scala</td><td>200902T183306Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210486#210486">user</a></td></tr>
 <tr d-ix="10"><td>222</td><td>JavaScript V8</td><td>200902T000438Z</td><td><a href="https://codegolf.stackexchange.com/questions/210454/spiralize-a-word-triangularly/210460#210460">Matthew </a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>123</s> <s>122</s> <s>109</s> <s>107</s> 87 bytes</h1>
-<pre><code>Print@@@SparseArray[i=p=0;p-=ReIm[(1+I)I^-⌈2√i++⌉/.I+1|I-1-&gt;I]&amp;/@#+2i-&gt;#,3i,&quot; &quot;]&amp;
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>123</s> <s>122</s> <s>109</s> <s>107</s> <s>87</s> 85 bytes</h1>
+<pre><code>Print@@@SparseArray[i=p=0;p-=ReIm[++I/I^⌈2√i++⌉/.I+1|I-1-&gt;I]&amp;/@#+2i-&gt;#,3i,&quot; &quot;]&amp;
 </code></pre>
-<p><a href="https://tio.run/##LY3BasIwGIDvfQpNoShJptWjVCJjY7mJHexQKvymqY02TYjZYbh5duAT7PH6Ip1uXr6P7/Rp8JXU4JWArky6pVONZ4ylFtxBLpyDj0wlNhnPLE1WkutsEGM@5GvaXs6T9vyjMG4v36MHjuNPTmM653k0YiGeKDoPyVQR1EN51JXssQIHwkt3YE@iMllIECKvJvXX4/ZavLHv/tk4nUd5dEoFNKdjgGAjClluK7Xb17oxFpEAvci6Nr034@qif2v4w@af4q7iZhR8db8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##LY29boMwGAB3noIYicWmNMlYEbmqEsVbFSJ1QFT6Ygy4wdgy7lDlZ06kPEEfjxehpO1yp5tOgauFAic5DGUyvFrZOkppasB24tla@MpkYpLHJxMlG8FUhjGL2Xt/u8z6y7fEuL9d4weGp0cWTaMFy8OYBngmo0VA5pIgH@XhUNKXGixwJ2xHl7zWWUAQIluduvFXjcVa8@lW2qo8zMNzyqE9HzwEO16Isqrlx75RrTaIeGgtmkb7b9o2xeTe8IvdH/m/iruRdxp@AA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input a list of characters.</p>
 <p>The direction of the (1-indexed) <span class="math-container">\$i\$</span>th character relative to the previous character can be computed with <span class="math-container">\$\Big\lceil2\sqrt i\Big\rceil\bmod 4\$</span>:</p>
 <ul>
@@ -50,10 +50,10 @@
 <li>3,0: ←</li>
 </ul>
 <hr />
-<h3>alternative, 99 bytes</h3>
-<pre><code>sPrint@@@Array[s[[4# #-2#+1-#2&amp;@@If[Abs@#2&lt;2#,!##,#-Abs@#2|-#2]]]/._@__-&gt;&quot; &quot;&amp;,2{L=Tr[1^s],L},-L]
+<h3>alternative approach, <s>99</s> 93 bytes</h3>
+<pre><code>sPrint@@@Array[&quot; &quot;&amp;@@s[[4# #-2#+1-#2&amp;@@If[(a=Abs@#2)&lt;2#,!##,#-a|-#2]]]&amp;,2{L=Tr[1^s],L},-L]
 </code></pre>
-<p><a href="https://tio.run/##JY1BTsMwEEX3OUXqkbLBBtViSdFUCESlLECtxMIy0cR1mkASV7a7QKU9BDfghBwhTenmfT29xe8o1raj2BgaqtkQ/n5@X3zTR0Sce09fKih1CykICVdTATJDXFRqXgYEeSeBTwA4iIt/j11rfXNdYFGIe5ayjMt9Plt5NX0PmucHLnI9vO4aG7HCh5o8mWh9wEdTOwWcMb5yyzj@b0Zb9NtdfHK@05nOjktD/XGfMCrN2labuvn4bLvebRlP2LNtW5e@Od@uJ2enf5QXmvOw5DCcAA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##JY1NasMwFIT3PoWjB6al8iIiyxpeKC0NeNGSQBZCgWdZjt3aVpCURcnPIXKDnDBHcJ128w3fzGI6CrXpKDSahiob/O1y/XBNHxBx7hz9SBazBNFLOYMYUgFP0xTE2Cwq@UDZvPAI4vFZAJ8AcEjpOM5KqYSLQ56tnJxuvOL5iae5Gj73jQlY4UtNjnQwzuOrrq0Ezhhf2WUYn7ejLfrdPrxZ16lEJeelpv58iBgVujTVtm6@vtuutzvGI/Zu2tbGa@vacnJ3@kPxT30PFp2GXw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Directly computes the index of each position: in Cartesian coordinates (zero-indexed),
 <span class="math-container">\$\operatorname{index}(x,y)=\begin{cases}2y(2y+1)-x,&amp;|x|&lt;-2y\\
 2\left(y+|x|\right)\left(2\left(y+|x|\right)+1\right)+x,&amp;\text{else}\end{cases}.\$</span></p>
