--- a/q/275009.html
+++ b/q/275009.html
@@ -37,6 +37,31 @@ y=lambda t:sum(y(i)for i in{*t})or.5
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=hZLPatwwEMbJ1U8hfJLSWbP2_o2pC7kUCj0UclSV4tpa18WWhS0vuyl9kl4CoX2LPkjzNB1JDs2WNDV4hGe-3zcztr_90EfzqVO3dzfZ---j2c22v342efuxzEkFQ8ZFOowt5UOaDS-4STN6SLOprkGl9HzoeiNLeqAKCrbrelKQWpGKK1HviL4uGDCGNcUEHKlhEK1gLnhbK7qAISq6URlMM2FRtLCwVGMr-9xIWjE0aaSiBXuZsOD40Nq4qY60dh1rhL6cm6-s66OVX-L-7LqUOyLLSg5JXn5u6sFQ98TSgOClSEba_EDbXON9AC9lzBURwDLnglj7D3amPleVpLiFE9j0CGTvprWgN51YPpIZiUWUay1VSff2iZ0I9ieC8Y-gl2bsldUEgW3S1EraJh0K6XyavVYa5z1ot4Kmcp834JTRoJva0JDMXpFw2gXFqDt9EZjzxW40WLzxCZfRfY0fhIevL9-8DYGE7y6vrkLBnTCzTQVYivnXfHt_ZjiPIRHAE1hgXMDSxZUQdookeKq8gjXGNWxcxsYNbD2wfBKwfjauJ-AZby993GGN3jZePNdh6bClwzYO2CLgMeAXEM89vf4v7ZsuH3k42h0xHnEMceLN4vlfbsk_3PxEm4cVpp_8Nw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as an adjacency list, test runner contains code to convert edge list to adjacency list.</p>
+<h2>Explanation</h2>
+<p>We use a unique representation for rooted unlabeled trees using nested tuples without introducing labels. In this system:</p>
+<ol>
+<li>Leaf are empty tuples <code>()</code>.</li>
+<li>Non-leaf node are tuples containing the representations of its child nodes.</li>
+<li>The outermost tuple is the root.</li>
+</ol>
+<p>Examples:</p>
+<ul>
+<li><code>((), ())</code>: Root with two leaves</li>
+<li><code>((()), ())</code>: Root with a leaf and a node having one leaf</li>
+</ul>
+<p>Let <span class="math-container">\$T(X)\$</span> be the tuple representation of a tree rooted at <span class="math-container">\$X\$</span></p>
+<p>We will now define an algorithm <span class="math-container">\$L(Y)\$</span> which counts the number of unique leaves in a tree when symmetries are taken into account. It operates on <span class="math-container">\$Y\$</span>, which is <span class="math-container">\$T(X)\$</span> for some node <span class="math-container">\$X\$</span>, i.e., the nested tuple representation of a tree rooted at <span class="math-container">\$X\$</span>:</p>
+<ol>
+<li>Base case: If Y is an empty tuple <code>()</code>, return 1</li>
+<li>For non-leaf nodes:
+<ol>
+<li>Deduplicate immediate child subtrees. (since path to nodes in duplicate subtrees will same)</li>
+<li>Recursively call <span class="math-container">\$L\$</span> for each remaining child subtree.</li>
+<li>Return the sum of recursive calls.</li>
+</ol>
+</li>
+</ol>
+<p>Now summing up <span class="math-container">\$L(Y)\$</span> for every unique <span class="math-container">\$T(l)\$</span> where <span class="math-container">\$l\$</span> is a leaf node, gives us something very close to double the answer since we would double count every backbone from <span class="math-container">\$u\$</span> to <span class="math-container">\$v\$</span> when <span class="math-container">\$u\$</span> and <span class="math-container">\$v\$</span> are not isomorphic, we fix this by adding 1 for every path we didn't double count and final divide by 2 to get the answer.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 643 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>F=lambda x:{J for K in x for J in K}
