--- a/q/275009.html
+++ b/q/275009.html
@@ -26,11 +26,55 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>189</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
-<tr d-ix="1"><td>149</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
+<tr d-ix="0"><td>135</td><td>Charcoal</td><td>240817T124317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275028#275028">Neil</a></td></tr>
+<tr d-ix="1"><td>189</td><td>Python</td><td>240817T044742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275026#275026">Mukundan</a></td></tr>
 <tr d-ix="2"><td>643</td><td>Python3</td><td>240816T145138Z</td><td><a href="https://codegolf.stackexchange.com/questions/275009/ways-to-paint-a-backbone-on-a-tree/275016#275016">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s></sup> 189 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>149</s> 135 bytes</h1>
+<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ≔ＥθＥθυηＦθＦＥθλＦ§θκ«≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ§≔§ηκλε»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«≔⁻§θ§ι⁰ιε¿εＦε⊞ζ⁺⟦κ⟧ι⊞υＥι§§ηκκ»ＵＭυ⌊⟦ι⮌ι⟧ＩＬΦυ⁼κ⌕υι
+</code></pre>
+<p><a href="https://tio.run/##bVJda4MwFH2evyL0KYIDs9c9lbJCYWWyPYoP0qY1GONHkm449tvdvSZp56igOTn3I/ccc6jK4dCWcprWWouzovuyo31CMqurt44PpWkHuhXquJaS7lRnzYcZhDrTOCErtoJvHcOnj5@jZQO/WIxWED21A6F9TObVB2Xs92uzU0f@hRy0I9/Rw59me6GsXqYkJK@hvAAQ@LBWCWnCVCOcGzrlRUI47j8rITnxXUck/RCb1iqDDIREYxvaxBBCIyhfkNemd87G2aQ76Sc4shXS8CGIxskFTv7S21Jq@pSQV67OpqJZ21EBZ/rJ56HGhRv/nQhQJCTFMhF7keJEKPe6uBcByjIJ9XldYCamcam5C1r3x8RdQ2tn6KwJsjZt05TqONd4V3IofOcXPmgOEgpMzeCaGLoptaFen/fBXqWDE3i1kJl1Q9k0pSx1T8RS5nB04xDNbARviM6IOYSAMYduHKLp8SJ/AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as an adjacency matrix. Explanation: Port of an earlier version of @Mukundan314's Python answer.</p>
+<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ
+</code></pre>
+<p>Convert the adjacency matrix into a modified adjacency list where each node is considered to be adjacent to itself.</p>
+<pre><code>≔ＥθＥθυη
+</code></pre>
+<p>Start constructing the list representations (Charcoal doesn't really have tuples) of trees rooted at each node.</p>
+<pre><code>Ｆθ
+</code></pre>
+<p>Repeat enough times to complete all of the representations.</p>
+<pre><code>ＦＥθλＦ§θκ«
+</code></pre>
+<p>Loop through each adjacency pair.</p>
+<pre><code>≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ
+</code></pre>
+<p>Get a list of all of the nodes that are next steps from the current node as seen from the current node, except for the current adjacent node.</p>
+<pre><code>≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ
+</code></pre>
+<p>Sort this list.</p>
+<pre><code>§≔§ηκλε
+</code></pre>
+<p>Save it as the current node as seen from the adjacent node.</p>
+<pre><code>»≔ΦＥθ⟦κι⟧⁼²Ｌ⊟ιζＦζ«
+</code></pre>
+<p>Start a breadth-first search for backbones with a list of all the leaves as the first element of a backbone.</p>
+<pre><code>≔⁻§θ§ι⁰ιε
+</code></pre>
+<p>Get a list of next nodes for the current node, excluding the previous nodes.</p>
+<pre><code>¿εＦε⊞ζ⁺⟦κ⟧ι
+</code></pre>
+<p>If there are any then for each next node add it to the backbone so far and add the new backbone to the search.</p>
+<pre><code>⊞υＥι§§ηκκ
+</code></pre>
+<p>Otherwise this is a leaf so save the list representation of this backbone.</p>
+<pre><code>»ＵＭυ⌊⟦ι⮌ι⟧
+</code></pre>
+<p>Take the minimum of each backbone and its reverse so that they can be deduplicated.</p>
+<pre><code>ＩＬΦυ⁼κ⌕υι
+</code></pre>
+<p>Deduplicate and count the backbones.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>316</s> <s>246</s> <s>238</s> <s>197</s></sup> 189 bytes</h1>
 <p><em>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">@Neil</a></em><br />
 <em>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/100664/emanresu-a">@emanresu A</a></em></p>
 <pre class="lang-python prettyprint-override"><code>lambda g,s=[]:sum([s:=s+[t:=(T:=lambda p,n:(*sorted(T(n,c)for c in g[n]if p^c),))(n,n)],L(t),.5,0][min(3,s.count(t))]for n,c in enumerate(g)if len(c)&lt;2)
@@ -80,50 +124,6 @@ lambda g, s=[]: sum(
     for n, c in enumerate(g) if len(c) &lt; 2                              # For every leaf node
 )
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 149 bytes</h1>
-<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ≔ＥθＥθυηＦθＦＥθλＦ§θκ«≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ§≔§ηκλε»≔ΦＥη⟦κκ§ικ§θκ⟧⁼²Ｌ⊟ιζＦζ«≔⁻§θ§ι¹…ι²ε¿εＦε⊞ζ⁺⟦§ι¹κ§§ηκκ⟧✂ι²⊞υ✂ι²»ＵＭυ⌊⟦ι⮌ι⟧ＩＬΦυ⁼κ⌕υι
-</code></pre>
-<p><a href="https://tio.run/##bVLLasMwEDzXXyFykkGFKNeegmkg0FDTHE0OxlEiEVl@SErblH67u2vLSRxqsLSa3R3NDipk3hZVrrtuaa06GrrJa9owknor32vR5q5q6UqZ/VJruja1d1vXKnOkMSMzPoP1FMPSxC/RlCBsHrMSsoeqJbSJSb@HpI7DeenWZi@@EAM68hM93ZFtlPF2WsJIdoL2HQQjPu6SkXJUdYF7R6Zsx4jA86dUWpDAekEwiEgqbxwikFKlL2kZQwqNoGICXkn/uRu16eGm39GRldJOtP0sclB@uulWQ89kPJzrtfG5tnTByJswRydpWtVUgaIwVy/5MvHq0ae7Kzi2Jd@FFolEHkYWiPSGqAOhInggwsDgQqqBLZtwTIQ/DA2qGdlqVYjAjtRCWzEQ@mkS3QE/kqosc7PH7OhvBgUf4ixaC7XgBJSm8OAcTXLraPAiOOqvNoEufKSI9B5BW9fN@Xz4Ij7nQxzdMIx6NIJ/zPYRHyIMOB@iG4ZR93zWfw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input as an adjacency matrix. Explanation: Port of an earlier version of @Mukundan314's Python answer.</p>
-<pre><code>≔Ｅθ⊞Ｏ⌕ＡＳ1κθ
-</code></pre>
-<p>Convert the adjacency matrix into a modified adjacency list where each node is considered to be adjacent to itself.</p>
-<pre><code>≔ＥθＥθυη
-</code></pre>
-<p>Start constructing the list representations (Charcoal doesn't really have tuples) of trees rooted at each node.</p>
-<pre><code>Ｆθ
-</code></pre>
-<p>Repeat enough times to complete all of the representations.</p>
-<pre><code>ＦＥθλＦ§θκ«
-</code></pre>
-<p>Loop through each adjacency pair.</p>
-<pre><code>≔Ｅ⁻§θκ⟦κλ⟧§§ημκζ
-</code></pre>
-<p>Get a list of all of the nodes that are next steps from the current node as seen from the current node, except for the current adjacent node.</p>
-<pre><code>≔⟦⟧εＷ⁻ζεＦ№ζ⌊μ⊞ε⌊μ
-</code></pre>
-<p>Sort this list.</p>
-<pre><code>§≔§ηκλε
-</code></pre>
-<p>Save it as the current node as seen from the adjacent node.</p>
-<pre><code>»≔ΦＥη⟦κκ§ικ§θκ⟧⁼²Ｌ⊟ιζＦζ«
-</code></pre>
-<p>Start a breadth-first search for backbones with a list of all the leaves with their index twice as the previous and current node index and their list representation as the backbone so far.</p>
-<pre><code>≔⁻§θ§ι¹…ι²ε
-</code></pre>
-<p>Get a list of next nodes for the current node, excluding the previous node.</p>
-<pre><code>¿εＦε⊞ζ⁺⟦§ι¹κ§§ηκκ⟧✂ι²
-</code></pre>
-<p>If there are any then for each next node add it to the backbone so far and add the current and next node with the backbone to the search.</p>
-<pre><code>⊞υ✂ι²
-</code></pre>
-<p>Otherwise this is a leaf so save the found backbone.</p>
-<pre><code>»ＵＭυ⌊⟦ι⮌ι⟧
-</code></pre>
-<p>Take the minimum of each backbone and its reverse so that they can be deduplicated.</p>
-<pre><code>ＩＬΦυ⁼κ⌕υι
-</code></pre>
-<p>Deduplicate and count the backbones.</p>
 </div>
 <div id="pu2" class="pu"><h1>Python3, 643 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>F=lambda x:{J for K in x for J in K}
