--- a/q/151276.html
+++ b/q/151276.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Uiua</td><td>231117T222201Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266861#266861">chunes</a></td></tr>
-<tr d-ix="1"><td>028</td><td>Zsh</td><td>240817T113257Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275027#275027">roblogic</a></td></tr>
-<tr d-ix="2"><td>033</td><td>Noulith</td><td>231118T012553Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266865#266865">bigyihsu</a></td></tr>
-<tr d-ix="3"><td>002</td><td>Thunno 2</td><td>230616T171318Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/261935#261935">The Thon</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Factor</td><td>221013T030326Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/253128#253128">chunes</a></td></tr>
-<tr d-ix="5"><td>002</td><td>Vyxal</td><td>221013T025125Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/253126#253126">DialFros</a></td></tr>
-<tr d-ix="6"><td>003</td><td>Japt h</td><td>171220T140948Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151309#151309">Shaggy</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Japt h</td><td>171220T140948Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151309#151309">Shaggy</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Uiua</td><td>231117T222201Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266861#266861">chunes</a></td></tr>
+<tr d-ix="2"><td>028</td><td>Zsh</td><td>240817T113257Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275027#275027">roblogic</a></td></tr>
+<tr d-ix="3"><td>033</td><td>Noulith</td><td>231118T012553Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266865#266865">bigyihsu</a></td></tr>
+<tr d-ix="4"><td>002</td><td>Thunno 2</td><td>230616T171318Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/261935#261935">The Thon</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Factor</td><td>221013T030326Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/253128#253128">chunes</a></td></tr>
+<tr d-ix="6"><td>002</td><td>Vyxal</td><td>221013T025125Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/253126#253126">DialFros</a></td></tr>
 <tr d-ix="7"><td>7064</td><td>Lua</td><td>181222T084835Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/177939#177939">cyclamin</a></td></tr>
 <tr d-ix="8"><td>093</td><td>Tcl</td><td>181222T092330Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/177940#177940">david</a></td></tr>
 <tr d-ix="9"><td>021</td><td>Kotlin</td><td>181221T195319Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/177929#177929">snail_</a></td></tr>
@@ -94,7 +94,19 @@
 <tr d-ix="65"><td>nan</td><td>C#</td><td>171220T102105Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151278#151278">LiefdeWe</a></td></tr>
 <tr d-ix="66"><td>054</td><td>Swift</td><td>171220T105606Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151285#151285">Endenite</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 6 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Japt <code>-h</code>, <s>5</s> 3 bytes</h1>
+<pre><code>ÔñÊ
+</code></pre>
+<p><a href="https://ethproductions.github.io/japt/?v=1.4.6&amp;code=1PHK&amp;input=WyJlZHVyIiwib290IiwidGFodCJdCi1o" rel="nofollow noreferrer">Try it</a></p>
+<p>Reverse, sort by length and output the last element.</p>
+<p>Alternatively ...</p>
+<h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-g</code></a>, 3 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>üÊÌ
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LWc&amp;code=/MrM&amp;input=WyJvbmUiLCAidHdvIiwgIm5vIl0" rel="nofollow noreferrer">Try it</a></p>
+<p>Sort &amp; group by length, get the last element and output the first element.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 6 <a href="https://codegolf.stackexchange.com/a/265917/97916">bytes</a></h1>
 <pre><code>⊡⊢⍖⍚⧻.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_1__ZiDihpAg4oqh4oqi4o2W4o2a4qe7LgoKZiB7ImEiICJiY2R6IiAiYWIiICJlZmcifQpmIHsib25lIiAidHdvIiAibm8ifQpmIHsidHdvIiAib25lIiAibm8ifQo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -105,7 +117,7 @@
 ⊡       # pick
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>for i;&lt;&lt;&lt;$i&gt;$i;ls -S|head -1
 </code></pre>
@@ -115,7 +127,7 @@
 <pre class="lang-sh prettyprint-override"><code>for b;(($#b&gt;$#a))&amp;&amp;a=$b;&lt;&lt;&lt;$a
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/betaveros/noulith" rel="nofollow noreferrer">Noulith</a>, 33 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/betaveros/noulith" rel="nofollow noreferrer">Noulith</a>, 33 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>\l-&gt;l find\w-&gt;w.len==max(l map len)
 </code></pre>
 <p><a href="https://betaveros.github.io/noulith/#Zjo9ClxsLT5sIGZpbmRcdy0+dy5sZW49PW1heChsIG1hcCBsZW4pCjsKCnRzIDo9IFsKWyJ0aW55IiwgInNtYWxsIiwgImJpZ2dlciIsICJiaWdnZXN0Il0sClsib25lIiwgInR3byIsICJubyJdLApbInR3byIsICJvbmUiLCAibm8iXSwKXTsKCmZvciAodCA8LSB0cykgKApwcmludCh0LCBmIHQpOwopOw==" rel="nofollow noreferrer">Try it online!</a></p>
@@ -128,28 +140,22 @@
                      max(l map len) # the longest `w` in `l`
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 2 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 2 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ØG
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728JKM0Ly_faMGCpaUlaboWiw_PcF9SnJRcDOUv2BKtlJ-XqqSjoFRSng-i8vKVYiFyAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Built-in.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 7 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 7 bytes</h1>
 <pre><code>longest
 </code></pre>
 <p><a href="https://tio.run/##FckxDoAgDADAnVc0fYAP0AcYFxfjAwhWQgIUSx2M8e2o0w23W6csbV2meeyh0nFSdlShCKleRUJWGIy5AR2ncioJAhZhLzalkD3@sdGH57gjPKZFzp6qtq69" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 <p>Builtin</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>ÞG
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/#WyJBIiwiIiwiw55HIiwiIiwiW1widGlueVwiLFwiYmlnZ2VzdFwiXVxuW1wib25lXCIsXCJ0d29cIl1cbltcInR3b1wiLFwib25lXCJdIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-</div>
-<div id="pu6" class="pu"><h1>Japt <code>-h</code>, <s>5</s> 3 bytes</h1>
-<pre><code>ÔñÊ
-</code></pre>
-<p><a href="https://ethproductions.github.io/japt/?v=1.4.6&amp;code=1PHK&amp;input=WyJlZHVyIiwib290IiwidGFodCJdCi1o" rel="nofollow noreferrer">Try it</a></p>
-<p>Reverse, sort by length and output the last element.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://www.lua.org" rel="nofollow noreferrer">Lua</a>, <del>70</del> 64 bytes</h1>
 
