--- a/q/82374.html
+++ b/q/82374.html
@@ -26,28 +26,44 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>Perl 5 + pa</td><td>240816T140242Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275014#275014">Dom Hast</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Jelly</td><td>160607T045206Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82378#82378">Dennis</a></td></tr>
-<tr d-ix="2"><td>078</td><td>Python 2</td><td>160607T055840Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82382#82382">Dennis</a></td></tr>
-<tr d-ix="3"><td>058</td><td>Ruby</td><td>160607T202922Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82409#82409">Value In</a></td></tr>
-<tr d-ix="4"><td>071</td><td>Python 3</td><td>160607T195707Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82407#82407">Dennis</a></td></tr>
-<tr d-ix="5"><td>081</td><td>Python</td><td>160607T044707Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82377#82377">Karl Nap</a></td></tr>
-<tr d-ix="6"><td>1816</td><td>Pyth</td><td>160607T131150Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82396#82396">FryAmThe</a></td></tr>
-<tr d-ix="7"><td>070</td><td>JavaScript ES6</td><td>160607T042440Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82375#82375">Downgoat</a></td></tr>
-<tr d-ix="8"><td>019</td><td>CJam</td><td>160607T055035Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82381#82381">Martin E</a></td></tr>
-<tr d-ix="9"><td>036</td><td>Retina</td><td>160607T081647Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82389#82389">Martin E</a></td></tr>
-<tr d-ix="10"><td>068</td><td>Julia</td><td>160607T053517Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82380#82380">Dennis</a></td></tr>
-<tr d-ix="11"><td>046</td><td>Vim</td><td>160607T051144Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82379#82379">DJMcMayh</a></td></tr>
-<tr d-ix="12"><td>019</td><td>Pyth</td><td>160607T042524Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82376#82376">Leaky Nu</a></td></tr>
+<tr d-ix="0"><td>038</td><td>Uiua</td><td>240817T185422Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275029#275029">Marcos G</a></td></tr>
+<tr d-ix="1"><td>044</td><td>Perl 5 + pa</td><td>240816T140242Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275014#275014">Dom Hast</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Jelly</td><td>160607T045206Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82378#82378">Dennis</a></td></tr>
+<tr d-ix="3"><td>078</td><td>Python 2</td><td>160607T055840Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82382#82382">Dennis</a></td></tr>
+<tr d-ix="4"><td>058</td><td>Ruby</td><td>160607T202922Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82409#82409">Value In</a></td></tr>
+<tr d-ix="5"><td>071</td><td>Python 3</td><td>160607T195707Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82407#82407">Dennis</a></td></tr>
+<tr d-ix="6"><td>081</td><td>Python</td><td>160607T044707Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82377#82377">Karl Nap</a></td></tr>
+<tr d-ix="7"><td>1816</td><td>Pyth</td><td>160607T131150Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82396#82396">FryAmThe</a></td></tr>
+<tr d-ix="8"><td>070</td><td>JavaScript ES6</td><td>160607T042440Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82375#82375">Downgoat</a></td></tr>
+<tr d-ix="9"><td>019</td><td>CJam</td><td>160607T055035Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82381#82381">Martin E</a></td></tr>
+<tr d-ix="10"><td>036</td><td>Retina</td><td>160607T081647Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82389#82389">Martin E</a></td></tr>
+<tr d-ix="11"><td>068</td><td>Julia</td><td>160607T053517Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82380#82380">Dennis</a></td></tr>
+<tr d-ix="12"><td>046</td><td>Vim</td><td>160607T051144Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82379#82379">DJMcMayh</a></td></tr>
+<tr d-ix="13"><td>019</td><td>Pyth</td><td>160607T042524Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82376#82376">Leaky Nu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pa</code>, 44 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, 38 bytes</h1>
+<p><a href="https://uiua.org/pad?src=0_12_0-rc_2__IyBFeHBlcmltZW50YWwhCiQgQWxneSBtZXQgYSBCZWFyCiQgQSBCZWFyIG1ldCBBbGd5CiQgVGhlIEJlYXIgd2FzIGJ1bGd5CiQgVGhlIGJ1bGdlIHdhcyBBbGd5Cgoibm8gcHJvIGdyIGFtIG0gaW5nIgoKL-KXh-KKguKorOKLheKImCjiiqHiipnil4wp4oq44oqD4oiIKOKKlzop4oqZOuKKmcKk4oq44omh4peH4oqi4oqC4oq44o2a4o2c4oqi4oy14oqc4pah4oq44omgQCAKCiZwICMgcHJldHR5IHByaW50Cg==" rel="nofollow noreferrer">Try it online!</a></p>
+<pre><code>/◇⊂⨬⋅∘(⊡⊙◌)⊸⊃∈(⊗:)⊙:⊙¤⊸≡◇⊢⊂⊸⍚⍜⊢⌵⊜□⊸≠@ 
+</code></pre>
+<p>This can probably be golfed more, but it's proving tough.</p>
+<h3>Explanation</h3>
+<pre><code>                                ⊜□⊸≠@  # split at spaces
+                          ⊂⊸⍚⍜⊢⌵ # join capitalized version
+                      ⊸≡◇⊢ # get all first letters
+           ⊸⊃∈(⊗:)⊙:⊙¤ # make mask of substitution positions a
+                       # and indices of the replacements
+   ⨬⋅∘(⊡⊙◌) # substitute character with replacement
+/◇⊂ # join into final string
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pa</code>, 44 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>%a=map/(.)(.*)/g,@F;$_=&lt;&gt;;s/(.)\K/$a{lc$1}/g</code></pre>
 <p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiJWE9bWFwLyguKSguKikvZyxARjskXz08PjtzLyguKVxcSy8kYXtsYyQxfS9nIiwiYXJncyI6Ii1wYSIsImlucHV0Ijoibm8gcHJvIGdyIGFtIG0gaW5nXG5QZW9wbGUgdGhpbmsgYmFuYW5hcyBhcmUgZ3JlYXQsIGRvbid0IHlvdT8ifQ==" rel="nofollow noreferrer">Try it online!</a></p>
 <h2>Explanation</h2>
 <p>Using <code>@F</code> (populated and <code>-a</code>uto-split on whitespace from the first line of input that contains the segments), the hash <code>%a</code> is built using the first letter of each segment as the key and any remaining letters (0 or more) as the value. Then <code>$_</code> is populated with the next line of input and a <code>s///</code>ubstitution is performed on <code>$_</code> replacing each character in the string (but <code>\K</code>eeping it in place) with the value from the hash at (the <code>l</code>ower<code>c</code>ase) key in <code>%a</code>. <code>$_</code> is then implicitly <code>-p</code>rinted.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="http://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṣ⁶;Œu1¦€$;©ZḢiÐ€ị®
 </code></pre>
 <p><a href="http://jelly.tryitonline.net/#code=4bmj4oG2O8WSdTHCpuKCrCQ7wqla4biiacOQ4oKs4buLwq4&amp;input=&amp;args=bm8gcHJvIGdyIGFtIG0gaW5n+UGV0IGEgUHVwcHkKR29vZ2xlIFdpa2lwZWRpYQ" rel="nofollow noreferrer">Try it online!</a></p>
@@ -73,7 +89,7 @@
                     that are at those indices.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Python 2, <s>83</s> 78 bytes</h1>
+<div id="pu3" class="pu"><h1>Python 2, <s>83</s> 78 bytes</h1>
 
 
 
@@ -103,12 +119,12 @@
 
 <p>Finally, <code>''.join</code> concatenates all resulting strings, returning the Geobitsized version of <strong>s</strong>.</p>
 </div>
-<div id="pu3" class="pu"><h1>Ruby, <s>65</s> <s>60</s> 58 bytes</h1>
+<div id="pu4" class="pu"><h1>Ruby, <s>65</s> <s>60</s> 58 bytes</h1>
 <pre><code>-&gt;w,s{s.gsub(/\w/){|c|w=~/\b#{c}(\w+)/i;c+($1||c)[1..-1]}}
 </code></pre>
 <p><a href="https://repl.it/CZWG/2" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>Python 3, 71 bytes</h1>
+<div id="pu5" class="pu"><h1>Python 3, 71 bytes</h1>
 
 
 
@@ -125,7 +141,7 @@
 
 <p>Finally, the dictionary comprehension <code>{ord(t[0]):t for t in...}</code> turns each word <strong>t</strong> into a dictionary entry with key <code>ord(t[0])</code> (code point of the first letter) and value <strong>t</strong>, so <code>str.translate</code> will perform the intended substitutions.</p>
 </div>
-<div id="pu5" class="pu"><h2>Python, <s>126</s> <s>99</s> <s>95</s> 81 bytes</h2>
+<div id="pu6" class="pu"><h2>Python, <s>126</s> <s>99</s> <s>95</s> 81 bytes</h2>
 
 <p>Alot thanks to Dennis:</p>
 
@@ -142,7 +158,7 @@
 
 <p>Edit5: using unnamed lambda and <code>j=join' '</code></p>
 </div>
-<div id="pu6" class="pu"><h1>Pyth, <del>18</del> 16</h1>
+<div id="pu7" class="pu"><h1>Pyth, <del>18</del> 16</h1>
 
 <pre><code>MsXGhMJcjdrBH3)J
 </code></pre>
@@ -156,7 +172,7 @@
 
 <p>The general idea here was to title case the geobitsian string and append that to the original string. Then split that on spaces and for each string, take the first letter and map it to the string it represents. That way <code>X</code> will turn the first letter of each word into the full word.</p>
 </div>
-<div id="pu7" class="pu"><h1>JavaScript ES6, <s>67</s> <s>63</s> 70 bytes</h1>
+<div id="pu8" class="pu"><h1>JavaScript ES6, <s>67</s> <s>63</s> 70 bytes</h1>
 
 <pre><code>g=&gt;s=&gt;s.replace(/\S/g,l=&gt;l+(g.match(`\\b\\${l}(\\S+)`,'i')||[,""])[1])
 </code></pre>
@@ -174,7 +190,7 @@
 }
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h2>CJam, 19 bytes</h2>
+<div id="pu9" class="pu"><h2>CJam, 19 bytes</h2>
 
 <pre><code>lq\S/_32af.^+_:c\er
 </code></pre>
@@ -195,7 +211,7 @@ _:c     e# Duplicate and convert each word to its first character.
 er      e# Transliteration, replacing each character with the corresponding word.
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h2><a href="https://github.com/mbuettner/retina" rel="nofollow">Retina</a>, 36 bytes</h2>
+<div id="pu10" class="pu"><h2><a href="https://github.com/mbuettner/retina" rel="nofollow">Retina</a>, 36 bytes</h2>
 
 <p>Byte count assumes ISO 8859-1 encoding.</p>
 
@@ -206,7 +222,7 @@ A1`
 
 <p><a href="http://retina.tryitonline.net/#code=aWAoPzw9Xi4qXGJcMihcdyspW17Ct10qPyhcdykpCiQxCkExYA&amp;input=bm8gcHJvIGdyIGFtIG0gaW5nClBldCBhIFB1cHB5Ckdvb2dsZSBXaWtpcGVkaWE" rel="nofollow">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1>Julia, <s>72</s> 68 bytes</h1>
+<div id="pu11" class="pu"><h1>Julia, <s>72</s> 68 bytes</h1>
 
 
 
@@ -215,12 +231,12 @@ A1`
 
 <p><a href="http://julia.tryitonline.net/#code=dyVzPXByb2QoYy0-IiRjImpvaW4oKFc9d3w-c3BsaXQpW2ZpbmQodC0-dFsxXT09Y3wnICcsVyldKVsyOmVuZF0scykKCnByaW50KCJubyBwcm8gZ3IgYW0gbSBpbmciJSJQZXQgYSBQdXBweVxuR29vZ2xlIFdpa2lwZWRpYSIp&amp;input=" rel="nofollow">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1>Vim, 46 keystrokes</h1>
+<div id="pu12" class="pu"><h1>Vim, 46 keystrokes</h1>
 <p>Ugly, and Hacky.</p>
 <pre><code>A &lt;esc&gt;:s/\&lt;\w/:%s\/\0\\c\/\\0/g&lt;cr&gt;:s/ /eg&lt;C-v&gt;&lt;Cr&gt;/g&lt;cr&gt;dgg@&quot;
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1>Pyth, 19 bytes</h1>
+<div id="pu13" class="pu"><h1>Pyth, 19 bytes</h1>
 <pre><code>.rzsC_hMBsm,rd0rd3c
 </code></pre>
 <p><a href="http://pyth.herokuapp.com/?code=.rzsC_hMBsm%2Crd0rd3c&amp;input=%22no+pro+gr+am+m+ing%22%0APeople+think+bananas+are+great%2C+don%27t+you%3F&amp;debug=0" rel="nofollow noreferrer">Try it online!</a></p>
